--- a/layout/session.liquid
+++ b/layout/session.liquid
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="{%- if settings.color_schemes.first.settings.background_accent != blank -%}{{- settings.color_schemes.first.settings.background_accent -}}{%- else -%}{{- branding_color -}}{%- endif -%}">
     {% comment %} Base stylesheets {% endcomment %}
     {{ "base.css" | asset_url | stylesheet_tag }}
+    {{ "rx.css" | asset_url | stylesheet_tag }}
     {% comment %} Fonts {% endcomment %}
     <script src="https://kit.fontawesome.com/ff3b3de2b5.js" crossorigin="anonymous"></script>
     {{ content_for_header }}
