--- a/snippets/variables-cart-lines.liquid
+++ b/snippets/variables-cart-lines.liquid
@@ -1,32 +1,33 @@
 {% style %}
   bq-cart-lines {
-    --line-image-size: var(--thumbnail-size);
-    --line-image-border-radius: var(--border-radius-none);
-    --line-control-border-radius: var(--border-radius-none);
-    --line-availability-border: 1px solid;
-    --line-title-font-size: 16px;
-    --line-variations-font-size: 14px;
-    --line-price-font-size: 16px;
-    --line-toggle-font-size: 16px;
-    --line-bundle-item-quantity-font-size: 16px;
-    --line-bundle-item-name-font-size: 16px;
-    --line-availability-border-color-available: var(--color-green);
     --line-availability-background-color-available: var(--color-green);
-    --line-availability-color-available: var(--color-white);
-    --line-availability-border-color-unavailable: var(--color-red);
     --line-availability-background-color-unavailable: var(--color-red);
+    --line-availability-border: 1px solid;
+    --line-availability-border-color-available: var(--color-green);
+    --line-availability-border-color-unavailable: var(--color-red);
+    --line-availability-color-available: var(--color-white);
     --line-availability-color-unavailable: var(--color-white);
-    --line-title-color: var(--color-primary);
-    --line-price-color: var(--color-primary);
-    --line-input-color: var(--color-primary);
-    --line-bundle-item-quantity-color: var(--color-primary);
-    --line-bundle-item-name-color: var(--color-primary);
     --line-border: 1px solid var(--color-border);
-    --line-image-border: 1px solid var(--color-border);
-    --line-control-border: 1px solid var(--color-border);
-    --line-variations-color: var(--color-third);
+    --line-bundle-item-name-color: var(--color-primary);
+    --line-bundle-item-name-font-size: var(--font-size-regular);
     --line-bundle-item-quantity-background: var(--background-primary);
-    --line-toggle-color: var(--background-accent);
+    --line-bundle-item-quantity-color: var(--color-primary);
+    --line-bundle-item-quantity-font-size: var(--font-size-regular);
+    --line-control-border: 1px solid var(--color-border);
+    --line-control-border-radius: var(--border-radius-none);
     --line-icon-color: var(--color-outline);
+    --line-image-border: 1px solid var(--color-border);
+    --line-image-border-radius: var(--border-radius-rounded);
+    --line-image-size: var(--thumbnail-size);
+    --line-input-color: var(--color-primary);
+    --line-price-color: var(--color-primary);
+    --line-price-font-size: var(--font-size-regular);
+    --line-title-color: var(--color-primary);
+    --line-title-font-size: var(--font-size-regular);
+    --line-toggle-color: var(--background-accent);
+    --line-toggle-font-size: var(--font-size-regular);
+    --line-variations-color: var(--color-secondary);
+    --line-variations-font-size: calc(var(--font-size-regular) - 2px);
+    --lines-empty-text-color: var(--color-primary);
   }
 {% endstyle %}
