--- a/snippets/variables-cart-services.liquid
+++ b/snippets/variables-cart-services.liquid
@@ -1,18 +1,18 @@
 {% style %}
   bq-cart-services {
     line-height: var(--line-height-sm);
-    --services-container-background: var(--color-azureish-white);
-    --services-text-color: var(--color-black);
-    --services-container-padding: 16px;
-    --services-container-border-radius: var(--border-radius-none);
-    --service-title-font-size: 18px;
-    --service-name-font-size: 16px;
-    --service-price-font-size: 16px;
-    --service-checkbox-border-radius: var(--border-radius-none);
-    --service-checkbox-size: 20px;
-    --service-checkbox-border: 1px solid var(--color-border);
-    --service-checkbox-color: var(--background-primary);
-    --service-checkbox-color-checked: var(--background-accent);
     --service-checkbox-icon-color: var(--color-accent);
+    --service-checkbox-color: transparent;
+    --service-checkbox-border-radius: var(--border-radius-rounded);
+    --service-checkbox-border: 1px solid var(--color-primary);
+    --service-checkbox-color-checked: var(--background-accent);
+    --service-checkbox-size: calc(var(--font-size-large) + 2px);
+    --service-name-font-size: var(--font-size-regular);
+    --service-price-font-size: var(--font-size-regular);
+    --service-title-font-size: var(--font-size-large);
+    --services-container-padding: 12px 12px 16px;
+    --services-container-background: transparent;
+    --services-container-border-radius: var(--border-radius-rounded);
+    --services-text-color: var(--color-primary);
   }
 {% endstyle %}
