--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -1,17 +1,17 @@
 {% style %}
   bq-minicart-button {
-    --minicart-button-size: 22px;
-    --minicart-button-badge-size: 12px;
-    --minicart-button-border-radius: var(--border-radius-circle);
-    --minicart-button-font-size: 14px;
-    --minicart-button-padding: 4px;
-    --minicart-button-hover-opacity: 1;
-    --minicart-button-transition-duration: var(--animation-duration);
-    --minicart-button-font: var(--font-body, --minicart-font, sans-serif);
-    --minicart-button-color: var(--background-primary);
     --minicart-button-accent-color: var(--background-accent);
     --minicart-button-badge-color: var(--color-accent);
+    --minicart-button-badge-size: 12px;
+    --minicart-button-border-radius: var(--border-radius-circle);
+    --minicart-button-color: var(--background-primary);
+    --minicart-button-font: var(--font-body, --minicart-font, sans-serif);
+    --minicart-button-font-size: calc(var(--font-size-regular) - 2px);
     --minicart-button-hover-color: var(--color-outline-hover);
+    --minicart-button-hover-opacity: 1;
+    --minicart-button-padding: 4px;
+    --minicart-button-size: 22px;
+    --minicart-button-transition-duration: var(--animation-duration);
   }
 
   .page-scrolled .header-transparent bq-minicart-button,
