--- a/snippets/variables-product-quantity.liquid
+++ b/snippets/variables-product-quantity.liquid
@@ -1,20 +1,20 @@
 {%- style -%}
   bq-product-button {
     --add-button-button-border-radius: var(--border-radius);
-    --add-button-button-padding: 14px;
-    --add-button-button-max-width: 100%;
-    --add-button-button-width: 100%;
-    --add-button-control-height: 50px;
-    --add-button-gap: 16px;
-    --add-button-input-border-radius: var(--border-radius-rounded);
-    --add-button-input-padding: 8px 12px;
-    --add-button-input-width: 110px;
-    --add-button-label-weight: 700;
-    --add-button-input-background-color: var(--background-primary);
-    --add-button-input-color: var(--color-primary);
-    --add-button-control-button-color: var(--color-primary);
-    --add-button-input-border: 1px solid var(--color-border);
     --add-button-button-color: var(--background-accent);
     --add-button-button-label-color: var(--color-accent);
+    --add-button-button-max-width: 100%;
+    --add-button-button-padding: 14px;
+    --add-button-button-width: 100%;
+    --add-button-control-button-color: var(--color-primary);
+    --add-button-control-height: 50px;
+    --add-button-gap: 16px;
+    --add-button-input-background-color: var(--background-primary);
+    --add-button-input-border: 1px solid var(--color-border);
+    --add-button-input-border-radius: var(--border-radius-rounded);
+    --add-button-input-color: var(--color-primary);
+    --add-button-input-padding: 8px 12px;
+    --add-button-input-width: 110px;
+    --add-button-label-weight: var(--font-weight-bold);
   }
 {%- endstyle -%}
