--- a/snippets/variables-product-variations.liquid
+++ b/snippets/variables-product-variations.liquid
@@ -1,19 +1,19 @@
 {%- style -%}
   bq-bundle-items,
   bq-product-variations-select {
-    --variation-select-font-size: 16px;
-    --variation-select-padding: 0 40px 0 10px;
-    --variation-select-control-height: 50px;
-    --variation-select-border-radius: var(--border-radius-rounded);
-    --bundle-items-image-size: 50px;
-    --bundle-items-image-border-radius: var(--border-radius-rounded);
-    --bundle-items-cell-padding: 5px;
-    --bundle-items-font-size: 15px;
-    --variation-select-background-color: var(--background-primary);
     --bundle-items-background-color: var(--background-primary);
-    --variation-select-color: var(--color-primary);
+    --bundle-items-cell-padding: 5px;
     --bundle-items-color: var(--color-primary);
-    --variation-select-border: 1px solid var(--color-border);
+    --bundle-items-font-size: calc(var(--font-size-regular) - 1px);
     --bundle-items-image-border: 1px solid var(--color-border);
+    --bundle-items-image-border-radius: var(--border-radius-rounded);
+    --bundle-items-image-size: 50px;
+    --variation-select-background-color: var(--background-primary);
+    --variation-select-border: 1px solid var(--color-border);
+    --variation-select-border-radius: var(--border-radius-rounded);
+    --variation-select-color: var(--color-primary);
+    --variation-select-control-height: 50px;
+    --variation-select-font-size: var(--font-size-regular);
+    --variation-select-padding: 0 40px 0 10px;
   }
 {%- endstyle -%}
