--- a/assets/accordion.css
+++ b/assets/accordion.css
@@ -32,7 +32,7 @@
 }
 
 .accordion__list {
-  font-size: 14px;
+  font-size: calc(var(--font-size-regular) - 2px);
   list-style: none;
   margin: 0;
   padding: 0;
@@ -71,7 +71,7 @@
 }
 
 .accordion__heading {
-  font-size: 18px;
+  font-size: var(--font-size-large);
   font-weight: var(--font-weight-extrabold);
   margin: 0;
   line-height: inherit;
