--- a/assets/pagination.css
+++ b/assets/pagination.css
@@ -24,7 +24,7 @@
   align-items: center;
   justify-content: center;
   padding: 10px 15px;
-  font-size: 14px;
+  font-size: calc(var(--font-size-regular) - 2px);
   font-weight: var(--font-weight-semibold);
   text-decoration: none;
   height: 100%;
