--- a/assets/product-page.css
+++ b/assets/product-page.css
@@ -17,7 +17,7 @@
 
 .product-main__grid {
   position: relative;
-  font-size: 16px;
+  font-size: var(--font-size-regular);
   line-height: var(--line-height-lg);
 }
 
@@ -86,7 +86,7 @@
 
 .product-main__availability bq-product-availability {
   font-family: var(--font-body);
-  font-size: 14px;
+  font-size: calc(var(--font-size-regular) - 2px);
 }
 
 .product-main__availability bq-product-availability[visible="true"] {
@@ -94,7 +94,7 @@
 }
 
 .product-main__availability bq-product-availability-calendar {
-  font-size: 14px;
+  font-size: calc(var(--font-size-regular) - 2px);
   font-family: var(--font-body);
   line-height: var(--line-height-lg);
   cursor: pointer;
@@ -108,7 +108,7 @@
 
 .product-main__message {
   text-align: center;
-  font-size: 12px;
+  font-size: calc(var(--font-size-regular) - 4px);
   padding: 23px 0 32px;
   color: var(--color-secondary);
 }
