--- a/assets/testimonials.css
+++ b/assets/testimonials.css
@@ -33,7 +33,7 @@
 
 .testimonials__content {
   padding: 32px;
-  font-size: 20px;
+  font-size: calc(var(--font-size-regular) + 4px);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -71,7 +71,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  font-size: 18px;
+  font-size: calc(var(--font-size-regular) + 2px);
   font-weight: var(--font-weight-extrabold);
   font-style: normal;
 }
@@ -92,7 +92,7 @@
 }
 
 .testimonials__small {
-  font-size: 16px;
+  font-size: var(--font-size-regular);
   font-weight: var(--font-weight-regular);
   opacity: 0.5;
 }
