--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -1,7 +1,7 @@
 {{ "404.css" | asset_url | stylesheet_tag }}
 
 {%- assign description           = section.settings.description -%}
-{%- assign button_label          = section.settings.button_label -%}
+{%- assign button_primary_label  = section.settings.button_primary_label -%}
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -62,10 +62,10 @@
       </div>
     {%- endif -%}
 
-    {%- if button_label != blank -%}
+    {%- if button_primary_label != blank -%}
       <div class="error-404__buttons">
         <a href="{{ routes.root_url }}" class="button button--primary button--large error-404__button">
-          {{- button_label -}}
+          {{- button_primary_label -}}
         </a>
       </div>
     {%- endif -%}
@@ -121,9 +121,9 @@
       },
       {
         "type": "text",
-        "id": "button_label",
+        "id": "button_primary_label",
         "label": "Button label",
-        "default": "Go Home"
+        "default": "Back to home"
       },
       {
         "type": "header",
