--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -4,8 +4,8 @@
 
   {{ "articles.css" | asset_url | stylesheet_tag }}
 
-  {%- assign button_label          = section.settings.button_label -%}
-  {%- assign button_url            = section.settings.button_url -%}
+  {%- assign button_outline_label  = section.settings.button_outline_label -%}
+  {%- assign button_outline_url    = section.settings.button_outline_url -%}
   {%- assign full_width            = section.settings.full_width -%}
   {%- assign title                 = section.settings.title -%}
   {%- assign color_scheme          = section.settings.color_scheme -%}
@@ -78,16 +78,16 @@
           <div class="articles__container container">
         {%- endif -%}
 
-          {%- if title != blank or button_label != blank and button_url != blank -%}
+          {%- if title != blank or button_outline_label != blank and button_outline_url != blank -%}
             <div class="articles__top">
               {%- if title != blank -%}
                 <h2 class="articles__title h4">{{- title -}}</h2>
               {%- endif -%}
 
-              {%- if button_label != blank and button_url != blank -%}
+              {%- if button_outline_label != blank and button_outline_url != blank -%}
                 <div class="articles__show-wrapper">
-                  <a href="{{ button_url }}" class="articles__show-button button button--outlined button--large">
-                    {{- button_label -}}
+                  <a href="{{ button_outline_url }}" class="articles__show-button button button--outlined button--large">
+                    {{- button_outline_label -}}
                   </a>
                 </div>
               {%- endif -%}
@@ -134,7 +134,7 @@
                     {%- endif -%}
 
                     {%- if text != blank -%}
-                      <div class="articles__text bq-content rx-content">{{- text | truncate: 200, " ..."  -}}</div>
+                      <div class="articles__text bq-content rx-content">{{- text | truncatewords: 35, " ..."  -}}</div>
                     {%- endif -%}
 
                     {%- if article_btn != blank and article_btn_url != blank -%}
@@ -150,10 +150,10 @@
             {%- endfor -%}
           </div>
 
-          {%- if button_label != blank and button_url != blank -%}
+          {%- if button_outline_label != blank and button_outline_url != blank -%}
             <div class="articles__show-wrapper articles__bottom">
-              <a href="{{ button_url }}" class="articles__show-button button button--outlined button--large">
-                {{- button_label -}}
+              <a href="{{ button_outline_url }}" class="articles__show-button button button--outlined button--large">
+                {{- button_outline_label -}}
               </a>
             </div>
           {%- endif -%}
@@ -226,14 +226,14 @@
       },
       {
         "type": "text",
-        "id": "button_label",
+        "id": "button_outline_label",
         "label": "Button label",
         "default": "See all Articles",
         "info": "Leave blank to hide the button"
       },
       {
         "type": "url",
-        "id": "button_url",
+        "id": "button_outline_url",
         "label": "Button link"
       },
       {
