--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -6,8 +6,8 @@
   {{ "products.css" | asset_url | stylesheet_tag }}
   {{ "product-card.css" | asset_url | stylesheet_tag }}
 
-  {%- assign button_label          = section.settings.button_label -%}
-  {%- assign button_url            = section.settings.button_url -%}
+  {%- assign button_outline_label  = section.settings.button_outline_label -%}
+  {%- assign button_outline_url    = section.settings.button_outline_url -%}
   {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign image                 = section.settings.image -%}
   {%- assign padding_top           = section.settings.padding_top -%}
@@ -193,10 +193,10 @@
         {%- endif -%}
       </div>
 
-      {%- if button_label != blank and button_url != blank -%}
+      {%- if button_outline_label != blank and button_outline_url != blank -%}
         <div class="products__buttons">
-          <a href="{{ button_url }}" class="products__button button button--outlined button--large">
-            {{- button_label -}}
+          <a href="{{ button_outline_url }}" class="products__button button button--outlined button--large">
+            {{- button_outline_label -}}
           </a>
         </div>
       {%- endif -%}
@@ -325,14 +325,14 @@
       },
       {
         "type": "text",
-        "id": "button_label",
+        "id": "button_outline_label",
         "label": "Button label",
         "default": "See all products",
         "info": "Leave blank to hide the button"
       },
       {
         "type": "url",
-        "id": "button_url",
+        "id": "button_outline_url",
         "label": "Button link"
       },
       {
