--- a/snippets/variables-cart-totals.liquid
+++ b/snippets/variables-cart-totals.liquid
@@ -1,29 +1,29 @@
 {% style %}
   bq-cart-totals {
-    --book-button-label-weight: 700;
-    --book-button-input-border-radius: var(--border-radius);
     --book-button-button-border-radius: var(--border-radius);
-    --book-button-control-height: 50px;
+    --book-button-button-color: var(--background-accent);
+    --book-button-button-label-color: var(--color-accent);
     --book-button-button-padding: 14px 24px;
     --book-button-button-width: 100%;
+    --book-button-control-height: 50px;
     --book-button-error-color: var(--color-red);
-    --totals-breakdown-font-size: 16px;
-    --totals-breakdown-font-weight: 400;
-    --totals-total-font-size: 20px;
-    --totals-total-font-weight: 700;
+    --book-button-input-border-radius: var(--border-radius);
+    --book-button-label-weight: var(--font-weight-bold);
+    --secondary-button-button-border: 1px solid var(--background-accent);
+    --secondary-button-button-color: var(--background-primary);
+    --secondary-button-button-label-color: var(--color-primary);
+    --totals-border: 1px solid var(--color-border);
+    --totals-breakdown-font-size: var(--font-size-regular);
+    --totals-breakdown-font-weight: var(--font-weight-regular);
     --totals-error-padding: 8px 16px;
-    --totals-error-border-radius: var(--border-radius-none);
     --totals-error-background-color: var(--color-red-light);
+    --totals-error-border-radius: var(--border-radius-rounded);
     --totals-error-color: var(--color-red);
     --totals-error-gap: 10px;
-    --totals-error-font-size: 16px;
-    --totals-error-font-weight: 400;
-    --secondary-button-button-label-color: var(--color-primary);
+    --totals-error-font-size: var(--font-size-regular);
+    --totals-error-font-weight: var(--font-weight-regular);
     --totals-text-color: var(--color-primary);
-    --totals-border: 1px solid var(--color-border);
-    --secondary-button-button-color: var(--background-primary);
-    --book-button-button-color: var(--background-accent);
-    --secondary-button-button-border: 1px solid var(--background-accent);
-    --book-button-button-label-color: var(--color-accent);
+    --totals-total-font-size: calc(var(--font-size-regular) + 4px);
+    --totals-total-font-weight: var(--font-weight-bold);
   }
 {% endstyle %}
