--- a/assets/account.css
+++ b/assets/account.css
@@ -90,11 +90,11 @@
 
 .account-fieldset__block {
   position: relative;
-  margin: 0 0 30px 0;
+  margin-bottom: 30px;
 }
 
 .account-fieldset__label {
-  padding: 0 0 8px;
+  padding-bottom: 8px;
   display: block;
   color: var(--color-secondary);
 }
@@ -400,11 +400,11 @@
   display: none;
 }
 
-div.account-fieldset--error .account-fieldset__label {
-  color: var(--color-red) !important;
+.account-fieldset--error .account-fieldset__label {
+  color: var(--color-red);
 }
 
-div.account-fieldset--error .account__error-message {
+.account-fieldset--error .account__error-message {
   margin-top: 5px;
   padding: 8px 16px;
   background:  var(--color-red-light);
@@ -415,12 +415,12 @@ div.account-fieldset--error .account__error-message {
   line-height: var(--line-height-sm);
 }
 
-div.account-fieldset--error .account-fieldset__static-label {
+.account-fieldset--error .account-fieldset__static-label {
   color: var(--color-red);
 }
 
-div.account-fieldset--error .account-fieldset__input,
-div.account-fieldset--error .account-fieldset__input:focus {
+.account-fieldset--error .account-fieldset__input,
+.account-fieldset--error .account-fieldset__input:focus {
   border-color: var(--color-red);
 }
 
