--- a/sections/edit-password-form.liquid
+++ b/sections/edit-password-form.liquid
@@ -1,6 +1,6 @@
 {{ "account.css" | asset_url | stylesheet_tag }}
 
-{%- assign button_label          = section.settings.button_label -%}
+{%- assign button_primary_label  = section.settings.button_primary_label -%}
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign description           = section.settings.description -%}
 {%- assign image                 = section.settings.image -%}
@@ -131,7 +131,7 @@
             name="commit"
             data-disable-with="Change my password"
           >
-            {{- button_label | default: "Change my password" -}}
+            {{- button_primary_label | default: "Change my password" -}}
           </button>
         </div>
       {%- endform -%}
@@ -236,7 +236,7 @@
       },
       {
         "type": "text",
-        "id": "button_label",
+        "id": "button_primary_label",
         "label": "Button label"
       },
       {
