--- a/sections/reset-password-form.liquid
+++ b/sections/reset-password-form.liquid
@@ -1,6 +1,7 @@
 {{ "account.css" | asset_url | stylesheet_tag }}
 
-{%- assign back                  = section.settings.back -%}
+{%- assign button_back           = section.settings.button_back -%}
+{%- assign button_primary_label  = section.settings.button_primary_label -%}
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign description           = section.settings.description -%}
 {%- assign email_label           = section.settings.email_label -%}
@@ -10,7 +11,6 @@
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign reset_password_label  = section.settings.reset_password_label -%}
 {%- assign rounded_corners       = section.settings.rounded_corners -%}
 {%- assign show_border           = section.settings.show_border -%}
 {%- assign title                 = section.settings.title -%}
@@ -77,7 +77,7 @@
       <div class="account__top account__divider--small">
         <a href="{{ routes.login_url }}" class="account__breadcrumbs">
           <i class="fa-regular fa-chevron-left account__breadcrumbs-chevron"></i>
-          {{- back | default: "Back" -}}
+          {{- button_back | default: "Back" -}}
         </a>
       </div>
 
@@ -117,7 +117,7 @@
           name="commit"
           data-disable-with="Send me reset password instructions"
         >
-          {{- reset_password_label | default: "Reset password" -}}
+          {{- button_primary_label | default: "Reset password" -}}
         </button>
       {%- endform -%}
     </div>
@@ -216,12 +216,12 @@
       },
       {
         "type": "text",
-        "id": "back",
+        "id": "button_back",
         "label": "Back button label"
       },
       {
         "type": "text",
-        "id": "reset_password_label",
+        "id": "button_primary_label",
         "label": "Reset password button label"
       },
       {
