--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -6,16 +6,18 @@
   {{ "products.css" | asset_url | stylesheet_tag }}
   {{ "product-card.css" | asset_url | stylesheet_tag }}
 
-  {%- assign button_label          = section.settings.button_label -%}
-  {%- assign button_url            = section.settings.button_url -%}
+  {%- assign borders               = section.settings.borders -%}
+  {%- assign button_outline_label  = section.settings.button_outline_label -%}
+  {%- assign button_outline_url    = section.settings.button_outline_url -%}
   {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign image                 = section.settings.image -%}
+  {%- assign image_placeholder     = settings.image_placeholder -%}
+  {%- assign is_focal              = settings.use_focal_images -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
   {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
   {%- assign rounded_corners       = section.settings.rounded_corners -%}
-  {%- assign borders               = section.settings.borders -%}
   {%- assign show_excerpt          = section.settings.show_excerpt -%}
   {%- assign show_navigation       = section.settings.show_navigation -%}
   {%- assign show_pagination       = section.settings.show_pagination -%}
@@ -23,8 +25,6 @@
   {%- assign tag_image             = section.settings.tag_image -%}
   {%- assign timer                 = section.settings.timer -%}
   {%- assign title                 = section.settings.title -%}
-  {%- assign image_placeholder     = settings.image_placeholder -%}
-  {%- assign is_focal              = settings.use_focal_images -%}
 
   {%- if collection != blank -%}
     {%- assign items = collection.items -%}
@@ -193,10 +193,10 @@
         {%- endif -%}
       </div>
 
-      {%- if button_label != blank and button_url != blank -%}
+      {%- if button_outline_label != blank and button_outline_url != blank -%}
         <div class="products__buttons">
-          <a href="{{ button_url }}" class="products__button button button--outlined button--large">
-            {{- button_label -}}
+          <a href="{{ button_outline_url }}" class="products__button button button--outlined button--large">
+            {{- button_outline_label -}}
           </a>
         </div>
       {%- endif -%}
@@ -325,14 +325,14 @@
       },
       {
         "type": "text",
-        "id": "button_label",
+        "id": "button_outline_label",
         "label": "Button label",
         "default": "See all products",
         "info": "Leave blank to hide the button"
       },
       {
         "type": "url",
-        "id": "button_url",
+        "id": "button_outline_url",
         "label": "Button link"
       },
       {
